--- a/templates/svc-otel-collector.yaml
+++ b/templates/svc-otel-collector.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: otel-collector
+  name: {{ include "otel.fullname" . }}-collector
   labels:
     app: otel-collector
+    {{- include "otel.selectorLabels" . | nindent 4 }}
 spec:
   selector:
     app: otel-collector
+    {{- include "otel.selectorLabels" . | nindent 4 }}
   ports:
     - name: {{ .Values.collector.exporters.portName }}
       port: {{ .Values.collector.exporters.port }}
