--- a/templates/cm-otel-collector.yaml
+++ b/templates/cm-otel-collector.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "otel.fullname" . }}-collector-config
+  labels:
+    {{- include "otel.labels" . | nindent 4 }}
+    app.kubernetes.io/component: collector
 data:
   collector.yaml: |
     receivers:
