--- a/templates/monitor-metrics.yaml
+++ b/templates/monitor-metrics.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ include "otel.fullname" . }}-metrics-monitor
   labels:
     k8s-app: {{ include "otel.fullname" . }}-collector
+    {{- include "otel.selectorLabels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
