--- a/templates/svc-otel-collector.yaml
+++ b/templates/svc-otel-collector.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ include "otel.fullname" . }}-collector
   labels:
-    {{- include "otel.selectorLabels" . | nindent 4 }}
+    {{- include "otel.labels" . | nindent 4 }}
     app.kubernetes.io/component: collector
 spec:
   selector:
