--- a/templates/cm-otel-collector.yaml
+++ b/templates/cm-otel-collector.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "otel.fullname" . }}-collector-config
+  name: '{{ include "otel.fullname" . }}-collector-config'
   labels:
     {{- include "otel.labels" . | nindent 4 }}
     app.kubernetes.io/component: collector
