--- a/templates/svc-jaeger.yaml
+++ b/templates/svc-jaeger.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "otel.fullname" . }}-jaeger
+  name: '{{ include "otel.fullname" . }}-jaeger'
   labels:
     {{- include "otel.labels" . | nindent 4 }}
     app.kubernetes.io/component: jaeger
