--- a/templates/svc-otel-collector.yaml
+++ b/templates/svc-otel-collector.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "otel.fullname" . }}-collector
+  name: '{{ include "otel.fullname" . }}-collector'
   labels:
     {{- include "otel.labels" . | nindent 4 }}
     app.kubernetes.io/component: collector
