--- a/templates/deploy-jaeger.yaml
+++ b/templates/deploy-jaeger.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.jaeger.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -32,3 +33,4 @@ spec:
             - containerPort: {{ .Values.jaeger.endpoints.grpc.port }}
           resources:
             {{- toYaml .Values.jaeger.resources | nindent 12 }}
+{{- end }}
