--- a/values.yaml
+++ b/values.yaml
@@ -73,6 +73,10 @@ jaeger:
   image:
     repository: jaegertracing/all-in-one
     tag: "1.49"
+  
+  # jaeger.memoryMaxTraces
+  # Maximum number of traces that can be stored in memory. Once the limit is reached, new traces will be dropped until some of the existing traces are flushed to the storage backend. Setting this value to 0 means no limit.
+  memoryMaxTraces: 100000
 
   endpoints:
     grpc:
@@ -82,7 +86,7 @@ jaeger:
 
   resources:
     limits:
-      memory: "256Mi"
+      memory: "512Mi"
     requests:
       cpu: "10m"
-      memory: "256Mi"
+      memory: "512Mi"
